Fix some clipping on smaller screen sizes

--- a/css/style.css
+++ b/css/style.css
@@ -353,7 +353,7 @@ SEC 5
     padding-bottom: 50px;
     /* background: purple; */
     background: #f6f6f6;
-    /* position: absolute; */
+    position: relative;
     /* top: 825px; */
     width: 100%;
     height: 200px;
@@ -368,6 +368,7 @@ SEC 5
     font-family: "Poppins", sans-serif;
     font-weight: 800;
     font-size: 60px;
+    top: 30px;
 }
 
 .rating {
@@ -377,7 +378,7 @@ SEC 5
     left: 0;
     right: 0;
     width: 250px;
-    top: 360px;
+    top: 160px;
 }
 .btns {
     /* background: orange; */
@@ -386,7 +387,7 @@ SEC 5
     left: 0;
     right: 0;
     width: 175px;
-    top: 410px;
+    top: 230px;
     height: 100px;
 }
 
